# Phoenix-ML

./: .gitignore  CMakeLists.txt  README.md
Test/: CMakeLists.txt
Test/ADT/: matvec.cpp
app/: main.cpp
cmake/: tool_setup.cmake
docs/: Doxyfile
docs/html/: LinearRegression_8h_source.html  Matrix_8hpp_source.html  Vector_8hpp_source.html  activations_8h_source.html  annotated.html  classINeuralNetwork-members.html  classINeuralNetwork.html  classINeuralNetwork__inherit__graph.dot  classINeuralNetwork__inherit__graph.md5  classLinearRegression-members.html  classLinearRegression.html  classLinearRegression__coll__graph.dot  classLinearRegression__coll__graph.md5  classLinearRegression__inherit__graph.dot  classLinearRegression__inherit__graph.md5  classMatrixTest-members.html  classMatrixTest.html  classMatrixTest__coll__graph.dot  classMatrixTest__coll__graph.md5  classMatrixTest__inherit__graph.dot  classMatrixTest__inherit__graph.md5  classNeuralModel-members.html  classNeuralModel.html  classNeuralModel__coll__graph.dot  classNeuralModel__coll__graph.md5  classNeuralModel__inherit__graph.dot  classNeuralModel__inherit__graph.md5  classSimpleNeuralNetwork-members.html  classSimpleNeuralNetwork.html  classSimpleNeuralNetwork__coll__graph.dot  classSimpleNeuralNetwork__coll__graph.md5  classSimpleNeuralNetwork__inherit__graph.dot  classSimpleNeuralNetwork__inherit__graph.md5  classes.html  classphoenix_1_1Matrix-members.html  classphoenix_1_1Matrix.html  classphoenix_1_1Matrix__inherit__graph.dot  classphoenix_1_1Matrix__inherit__graph.md5  classphoenix_1_1Tensor-members.html  classphoenix_1_1Tensor.html  (+55 more)
docs/html/search/: all_1.js  all_10.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
examples/: CMakeLists.txt  binding.cpp  linear_regression.cpp  logistic_regression.cpp  main.cpp  nnload.cpp  nntrain.cpp  test.cpp  wlinear.cpp
